k3s-cluster-automate/manifests/oai/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oai
  labels:
    app: oai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oai
  template:
    metadata:
      labels:
        app: oai
    spec:
      containers:
        - name: oai
          image: khanonci/oai-reverse-proxy:latest
          ports:
            - name: http
              containerPort: 7860
          volumeMounts:
            - name: oai-storage
              mountPath: /app/data
            - name: oai-greeting
              mountPath: /app/greeting.md
              subPath: greeting.md
      volumes:
        - name: oai-storage
          persistentVolumeClaim:
            claimName: oai
        - name: oai-greeting
          configMap:
            name: oai-greeting
---
