k3s-cluster-automate/manifests/oai/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oai
spec:
  ports:
    - name: http
      port: 80
      targetPort: 7860
  selector:
    app: oai
---
