k3s-cluster-automate/manifests/oai/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oai
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - 'oai.local.lttviet.com'
      secretName: lttviet.com
  rules:
    - host: oai.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oai
                port:
                  number: 80
---
